Qute - few micro-optimizations
- get rid of LinkedList
- cache hashCode in MemberKey used in ReflectionValueResolver
- use CompletedStage where possible
- IfSectionHelper refactoring